--- a/practicas/Android/Pr1_layouts/app/src/main/res/values/strings.xml
+++ b/practicas/Android/Pr1_layouts/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Pr1_layouts</string>
+    <string name="btn1">Botón 1</string>
+    <string name="btn2">Botón 2</string>
+    <string name="btn3">Botón 3</string>
+    <string name="btn4">Botón 4</string>
 </resources>
